updated site name and icon

--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="./favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Ibrahim Abdulah"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,7 +24,16 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Ibrahim Abdulah</title>
+    <meta property="og:site_name" content="Ibrahim Abdulah | Full-Stack developer" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Ibrahim Abdulah | Full-Stack Web developer" />
+    <meta property="og:locale" content="en" />
+    <meta property="og:url" content="https://www.ibrahimabdulah.com" />
+    <meta name="description"
+      content="I'm a Junior Full-Stack Web Developer and a bootcamp graduate based in British Columbia, Canada. I like building Web Applications that leverage my skills in web development. Check out some of my work in the Projects section. I'm open to Job opportunities where I can contribute, learn and grow. If you have a good opportunity that matches my skills and experience then don't hesitate to contact me." />
+    <meta name="keywords"
+      content="Developer, Javascript, Freelancer, React, Node, Express, Tailwind CSS, React JS Developer, React Developer" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
